--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image: url(../public/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
